--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/bmoren/node-omxplayer-sync.git"
   },
   "author": "bmoren",
-  "license": "ISC",
+  "license": "GNU General Public License v3.0",
   "bugs": {
     "url": "https://github.com/bmoren/node-omxplayer-sync/issues"
   },
